# raycaster-cooking

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: assets.json
libs/: SDL3.lib  SDL3_image.lib  SDL3_mixer.lib  SDL3_ttf.lib  libSDL3_image.so.0.3.0  libSDL3_mixer.so.0.0.0  libSDL3_ttf.so.0.2.2
objs/: assetmanager.d  block.d  camera.d  canvas.d  frame.d  fridge.d  game.d  interaction.d  main.d  map.d  math.d  matrix.d  npc.d  player.d  raycast.d  scene.d  sprite.d  stove.d  strip.d  table.d  text.d
src/: assetmanager.cpp  assetmanager.h  camera.cpp  camera.h  canvas.cpp  canvas.h  frame.cpp  frame.h  fridge.cpp  fridge.h  game.cpp  game.h  interaction.cpp  interaction.h  main.cpp  map.cpp  map.h  math.cpp  math.h  npc.cpp  npc.h  player.cpp  player.h  raycast.cpp  raycast.h  scene.cpp  scene.h  sprite.cpp  sprite.h  stove.cpp  stove.h  strip.cpp  strip.h  text.cpp  text.h
